--- a/artist.html
+++ b/artist.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-    <div class="sub-cover cover-contact">
+    <div  class="sub-cover cover-contact">
         <header class="page-header">
             <nav class="main-nav">
                 <ul class="head-main-nav">
@@ -40,7 +40,7 @@
                 <h1 class="us-h1">USartist</h1> 
                 <img class="us-icon-img" src="image/image/—Pngtree—america flag pin model style_6541469.png" alt="アメリカ国旗"> 
                 <div class="imgs-row img-row1" >
-                    <div class="us-ar">
+                    <div id="us" class="us-ar">
                         <h2>juice WRLD</h2>
                         <ul>
                             <li class="artist">
@@ -396,7 +396,7 @@
             <div class="swiper-slide">
                 <h1 class="us-h1">UKartist</h1>  
                 <img class="uk-icon-img" src="image/image/—Pngtree—united kingdom flag_8365182.png" alt="イギリス国旗">
-                <div class="uk-ar imgs-row img-row1">
+                <div id="uk" class="uk-ar imgs-row img-row1">
                     <div >
                         <h2>nino uptown</h2>
                         <ul>
@@ -751,7 +751,7 @@
                 <h1 class="us-h1">k-artist</h1> 
                 <img class="k-icon-img" src="image/image/—Pngtree—south korea flag pin badge_8503446.png" alt="韓国国旗"> 
                 <div class="imgs-row img-row1" >
-                    <div class="us-ar">
+                    <div id="k-artist" class="us-ar">
                         <h2>jay park</h2>
                         <ul>
                             <li class="artist">
@@ -1037,7 +1037,7 @@
             <div class="swiper-slide">
                 <h1 class="us-h1">japan artist</h1>  
                 <img class="jp-icon-img" src="image/image/—Pngtree—japan flag pin badge_8486581.png" alt="日本国旗">
-                <div class="imgs-row img-row1">
+                <div id="jp" class="imgs-row img-row1">
                     <div>
                         <h2>tepa roucci</h2>
                         <ul>
