--- a/movie.html
+++ b/movie.html
@@ -31,21 +31,16 @@
             <h2 class="movie-h2">Netflix Series</h2>
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
-                    <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/bs.PNG" data-img-alt="aaa">
-                            <img class="imgone" src="image/mm/bs.PNG" alt="">
-                        </a>
-                        <h2 class="movie-name">aaa</h2>
-                    </div>
+                    
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/top.PNG" data-img-alt="『トップボーイ』の舞台はロンドンの裏社会。 主人公ダシェンとサリーを中心にした若者たちが、犯罪に手を染めながらも生き残ろうと葛藤し、友情と裏切りが交差する中で自身の運命と向き合っていく姿が描かれる">
-                            <img class="imgone" src="image/mm/top.PNG" alt="">
+                            <img class="imgone" src="image/mm/top.PNG" alt="トップボーイ">
                         </a>
                         <h2 class="movie-name">トップボーイ</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/ab.PNG" data-img-alt="アウターバングス">
-                            <img class="imgone" src="image/mm/ab.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/ab.PNG" data-img-alt="持てる者と持たざる者が住む島に伝わる失われた財宝伝説と、父親の失踪になんらかの関係があると知った16歳のジョンBは、仲間を誘い宝探しを始める">
+                            <img class="imgone" src="image/mm/ab.PNG" alt="アウターバンクス">
                         </a>
                         <h2 class="movie-name">アウターバングス</h2>
                     </div>
@@ -56,20 +51,20 @@
                         <h2 class="movie-name">aaa</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/st.PNG" data-img-alt="姿を消した少年、人目を忍び行われる数々の実験、破壊的な超常現象、突然現れた少女。 すべての不可解な謎をつなぐのは、小さな町に隠された恐ろしい秘密。 完﻿全見﻿放﻿題﻿。 80年代のSF・ホラー映画へのオマージュ満載で描いた本作は、3度のドラマ部門作品賞ノミネートなど、数十のエミー賞候補歴を持つ。">
-                            <img class="imgone" src="image/mm/st.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/st.PNG" data-img-alt="姿を消した少年、人目を忍び行われる数々の実験、破壊的な超常現象、突然現れた少女。 すべての不可解な謎をつなぐのは、小さな町に隠された恐ろしい秘密。 ">
+                            <img class="imgone" src="image/mm/st.PNG" alt="ストレンジャーシングス">
                         </a>
                         <h2 class="movie-name">ストレンジャーシングス</h2>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/amb.PNG" data-img-alt="スーパーヒーローとして育てられたが疎遠になってしまった兄弟姉妹が、養父の死をきっかけに再会。 そこで彼らに知らされたのは衝撃的な家族の秘密と、人類に迫りくる危機だった。">
-                            <img class="imgone" src="image/mm/amb.PNG" alt="">
+                            <img class="imgone" src="image/mm/amb.PNG" alt="アンブレラーアカデミー">
                         </a>
                         <h2 class="movie-name">アンブレラーアカデミー</h2>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/sam.PNG" data-img-alt="ニューヨークの名門校を２度も退学になった問題児サマーは色々あってオーストラリアの小さな町ショアヘイブンにやってきた。サマーを預かることになった幼馴染のアリがいるギブソン家。ショアヘイブンは街をおこしてサーフィン熱があり、アリを筆頭にそこで出会う同世代のサーファーたちとの物語。">
-                            <img class="imgone" src="image/mm/sam.PNG" alt="">
+                            <img class="imgone" src="image/mm/sam.PNG" alt="カオスなサマー">
                         </a>
                         <h2 class="movie-name">カオスなサマー</h2>
                     </div>
@@ -84,27 +79,27 @@
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/abt.PNG" data-img-alt="アルファ・ケンタウリ系惑星ポリフェマス最大の衛星パンドラを舞台にした壮大な戦いに焦点を当てている。パンドラでは、人間の入植者とパンドラの原住民であるナヴィが、地球の資源とナヴィの存続をめぐって戦争を繰り広げる。この映画のタイトルは、映画の登場人物たちが原住民と交流するために使用した、人造ナヴィを指している。">
-                            <img class="imgone" src="image/mm/abt.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/abt.PNG" data-img-alt="アルファ・ケンタウリ系惑星ポリフェマス最大の衛星パンドラを舞台にした壮大な戦いに焦点を当てている。パンドラでは、人間の入植者とパンドラの原住民であるナヴィが、地球の資源とナヴィの存続をめぐって戦争を繰り広げる。">
+                            <img class="imgone" src="image/mm/abt.PNG" alt="映画アバター">
                         </a>
                         <h2 class="movie-name">アバター</h2>
                         <p class="movie-di"></p>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/sn.PNG" data-img-alt="2003年。ハーバード大学に通う天才プログラマーのマーク・ザッカーバーグは、失恋の腹いせに学内のサーバーに侵入し、女子学生の写真を掲載した人気投票サイトを作る。次に彼は、親友と共にハーバード生が使うSNSサイトを構築。登録者を瞬く間に獲得していき、規模を拡大させていく。">
-                            <img class="imgone" src="image/mm/sn.PNG" alt="">
+                            <img class="imgone" src="image/mm/sn.PNG" alt="映画ソーシャルネットワーク">
                         </a>
                         <h2 class="movie-name">ソーシャルネットワーク</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/stj.PNG" data-img-alt="アップル社の共同設立者でデジタルテクノロジーの常識を変えた男、スティーブ・ジョブズ。彼とその家族、関係者への約3年にわたるインタビューなどを基に、ベストセラーとなった記録本を原案に、ジョブズの半生を描く人間ドラマ。鬼才ダニー・ボイルが監督を務め、ジョブズをマイケル・ファスベンダーが演じる。">
-                            <img class="imgone" src="image/mm/stj.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/stj.PNG" data-img-alt="アップル社の共同設立者でデジタルテクノロジーの常識を変えた男、スティーブ・ジョブズ。彼とその家族、関係者への約3年にわたるインタビューなどを基に、ベストセラーとなった記録本を原案に、ジョブズの半生を描く人間ドラマ。">
+                            <img class="imgone" src="image/mm/stj.PNG" alt="映画スティーブ・ジョブズ">
                         </a>
                         <h2 class="movie-name">スティーブジョブズ</h2>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/red.PNG" data-img-alt="自らの姿をアバターに変え、さまざまな理想を叶えることのできるVRの世界「オアシス」。その創設者の死後、オアシスの3つの謎を解いた者に莫大な財産とその仮想世界を譲るという遺言が発表される。そして全世界を巻き込む争奪戦に、17歳の少年が挑む。">
-                            <img class="imgone" src="image/mm/red.PNG" alt="">
+                            <img class="imgone" src="image/mm/red.PNG" alt="映画レディープレイヤー２">
                         </a>
                         <h2 class="movie-name">レディープレーヤー２</h2>
                     </div>
@@ -115,14 +110,14 @@
                         <h2 class="movie-name">aaa</h2>
                     </div>
                     <div class="swiper-slide">
-                        <a href="#" class="open-modal" data-img-src="image/mm/stw.PNG" data-img-alt="「スター・ウォーズ」（Star Wars）は、ジョージ・ルーカスが製作し、1977年に公開された同名の映画から始まるアメリカのスペースオペラシリーズである[1]。映画だけでなく、アニメーション、小説、コミック、ゲームなど複数の媒体で展開される。">
-                            <img class="imgone" src="image/mm/stw.PNG" alt="">
+                        <a href="#" class="open-modal" data-img-src="image/mm/stw.PNG" data-img-alt="「遠い昔、遥か彼方の銀河系で」の登場人物たちの冒険を描いている。 そこでは、人間と多くの種の異星人（多くの場合はヒューマノイド）が、日常生活を支援してくれるロボットや「ドロイド」と共存しており、光速の超空間技術によって惑星間の宇宙旅行が一般的に行われている">
+                            <img class="imgone" src="image/mm/stw.PNG" alt="映画スターウォーズ">
                         </a>
                         <h2 class="movie-name">スターウォーズ</h2>
                     </div>
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/sr.PNG" data-img-alt="アーケードゲームの世界で悪役キャラクターを演じてきたラルフが、ヒーローになる夢をかなえるために冒険に旅立つファンタジー・アドベンチャー映画。">
-                            <img class="imgone" src="image/mm/sr.PNG" alt="">
+                            <img class="imgone" src="image/mm/sr.PNG" alt="映画シュガーラッシュ">
                         </a>
                         <h2 class="movie-name">シュガー・ラッシュ</h2>
                     </div>
@@ -134,12 +129,12 @@
    
     <div id="like" class="like">
         <div class="about">
-            <h2 class="movie-h2">SUPPER</h2>
+            <h2 class="movie-h2">おすすめ</h2>
             <div class="swiper swiper1">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
                         <a href="#" class="open-modal" data-img-src="image/mm/ws.PNG" data-img-alt="解説 ロアルド・ダールの名作児童小説「チョコレート工場の秘密」を、ティム・バートン監督＆ジョニー・デップのタッグで映画化。 不思議なチョコレート工場に招待された子どもたちの驚きの体験を、ブラックユーモアを散りばめながら独創的な世界観で描き出す">
-                            <img class="imgone" src="image/mm/ws.PNG" alt="">
+                            <img class="imgone" src="image/mm/ws.PNG" alt="映画ワイルドスピード">
                         </a>
                         <h2 class="movie-name">ワイルドスピード</h2>
                     </div>
