--- a/food.html
+++ b/food.html
@@ -16,12 +16,12 @@
         <header class="page-header">
             <nav class="main-nav">
                 <ul class="head-main-nav">
-                    <h1 class="nav-h1"><a href="index.html"><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
-                    <li class="nav-li"><a style="text-decoration: none;" href="#like">my favorite</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="hood.html">myhood</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="qa.html">q&a</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="sns.html">sns</a></li>
-                    <li class="nav-li"><a style="text-decoration: none;"  href="aaaa.html">career</a></li>
+                    <h1 class="nav-h1"><a href="index.html" ><img class="nav-img" src="image/image/pngwing.comのコピー.png" alt=""></a></h1>
+                    <li class="nav-li"><a style="text-decoration: none;" href="index.html#like">my favorite</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="index.html#hood">myhood</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="index.html#q&a">q&a</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="index.html#sns">sns</a></li>
+                    <li class="nav-li"><a style="text-decoration: none;"  href="index.html#career">career</a></li>
                 </ul>
             </nav>
         </header>
